@@ -1,0 +1,32 @@
+/*
+ * Copyright (C) 2014 Brockmann Consult GmbH
+ *
+ * This program is free software; you can redistribute it and/or modify it under the terms of the GNU
+ * General Public License as published by the Free Software Foundation; either version 3 of the License,
+ * or (at your option) any later version. This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+ * PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with this program; if not, see
+ * http://www.gnu.org/licenses/
+ */
+
+package org.jpy.annotations;
+
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+/**
+ * Used to mark method parameters as mere output, that is, an argument is expected to be written to by the method but not read from.
+ * <p/>
+ * <i>Note: this class is not used yet.</i>
+ *
+ * @author Norman Fomferra
+ * @since 0.7.2 (not used)
+ */
+@Target(value = ElementType.PARAMETER)
+@Retention(value = RetentionPolicy.RUNTIME)
+public @interface Output {
+}
